cncProd/force-app/main/default/objects/Usage_Transaction__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>TEXT(Reward_Profile__r.Brand__c)</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>