cncProd/force-app/main/default/objects/Usage_Transaction__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eShop</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>