cncProd/force-app/main/default/objects/Usage_Transaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Usage Transactions</relationshipLabel>
    <relationshipName>Usage_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>