cncProd/force-app/main/default/objects/Usage_Transaction__c/fields/COST__c.field-meta.xml
<CustomField>
    <fullName>COST__c</fullName>
    <label>COST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>