cncProd/force-app/main/default/objects/Usage_Transaction__c/fields/e_Invoice__c.field-meta.xml
<CustomField>
    <fullName>e_Invoice__c</fullName>
    <label>e-Invoice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>