cncProd/force-app/main/default/objects/Usage_Transaction__c/fields/Outstanding_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Payment_Amount__c</fullName>
    <label>Outstanding Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>