cncProd/force-app/main/default/objects/Usage_Transaction__c/fields/Outstanding_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Payment_Type__c</fullName>
    <label>Outstanding Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>