cncProd/force-app/main/default/objects/Usage_Transaction__c/fields/Reward_Profile__c.field-meta.xml
<CustomField>
    <fullName>Reward_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reward Profile</label>
    <referenceTo>Reward_Profile__c</referenceTo>
    <relationshipLabel>Usage Transactions</relationshipLabel>
    <relationshipName>Usage_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>