cncProd/force-app/main/default/objects/Usage_Transaction__c/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>true</active>
    <description>Refund/Ajustment/etc</description>
    <label>Credit</label>
</RecordType>