cncProd/force-app/main/default/objects/Usage_Transaction__c/recordTypes/Debit.recordType-meta.xml
<RecordType>
    <fullName>Debit</fullName>
    <active>true</active>
    <description>Credit Deduction</description>
    <label>Debit</label>
</RecordType>