cncProd/force-app/main/default/objects/Usage_Transaction__c/validationRules/Autoline_Fields_Edit_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>Autoline_Fields_Edit_Condition</fullName>
    <active>true</active>
    <description>The condtions when Admin can edit Autoline Invoice fields</description>
    <errorConditionFormula>AND( ISPICKVAL( Channel__c , &apos;eShop&apos;),
 (RecordType.Name  = &apos;Debit&apos;),
 OR( 
AND( ISCHANGED( Autoline_Invoice_Date__c ) ,
  NOT( ISBLANK( PRIORVALUE(  Autoline_Invoice_Date__c ) )) 
) ,
 AND(ISCHANGED(  Autoline_Invoice_Number__c ) ,
 NOT( ISBLANK( PRIORVALUE(  Autoline_Invoice_Number__c ) ))
) 
) 
) &amp;&amp; NOT( $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>You can only edit Autoline Invoice Date/ Autoline Invoice Number only if they are blank and Channel is eShop.</errorMessage>
</ValidationRule>